--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,53 @@
 body {
-    font-family: 'Raleway', sans-serif;
     font-family: 'Roboto', sans-serif;
     background-color: #ffffff;
-    margin: 0;
     color: #434455
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+
+a {
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+
+
+.container {
+    max-width: 1440;
+    margin: 0 156px;
+}
+
+/* header  */
+
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 72px;
+    flex-shrink: 0;
+    border-bottom: 1px solid #E7E9FC;
 }
 
 .header-logo {
@@ -12,21 +56,17 @@ body {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.17;
-    letter-spacing: 0.54px;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
-a {
-    text-decoration: none;
-}
+
 
 .header-logo span {
     color: #2E2F42;
 }
 
-ul {
-    list-style-type: none;
-}
+
 
 .page-link {
     color: #2E2F42;
@@ -34,7 +74,7 @@ ul {
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 
 }
 
@@ -47,6 +87,21 @@ ul {
     color: #404BBF;
 }
 
+.header-menu,
+.menu-nav,
+.address-contacts {
+    display: flex;
+}
+
+.header-menu {
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 40px;
+    margin-left: 76px;
+}
+
+/* address  */
+
 .address {
     font-style: normal;
 }
@@ -57,16 +112,26 @@ ul {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 }
 
 .contacts:hover {
     color: #404BBF;
 }
 
+.address-contacts {
+    gap: 40px;
+}
+
+/* section-one */
+
 .section-one {
     background: #2E2F42;
     text-align: center;
+    height: 600px;
+    flex-shrink: 0;
+    padding-top: 188px;
+
 }
 
 h1 {
@@ -75,8 +140,9 @@ h1 {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
-    letter-spacing: 1.12px;
+    letter-spacing: 0.02em;
     margin: 0 auto;
+    width: 496px;
 }
 
 .one-button {
@@ -86,8 +152,13 @@ h1 {
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.64px;
-    cursor: pointer;
+    letter-spacing: 0.04em;
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    margin-top: 48px;
+
 }
 
 .one-button:hover,
@@ -95,18 +166,30 @@ h1 {
     background-color: #404BBF;
 }
 
+
+
+/* section-two  */
 .title-section {
     color: #2E2F42;
     font-family: 'Roboto';
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.72px;
+    letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+
 }
 
+.benefits {
+    display: none;
+}
 
+.section-two,
+.section-three,
+.section-four {
+    padding: 120px 0;
+}
 
 .section-two-title,
 .section-three-title,
@@ -116,7 +199,7 @@ h1 {
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.02em;
 }
 
 
@@ -127,19 +210,82 @@ h1 {
     font-family: 'Roboto';
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 }
+
+.section-two-lists {
+    display: flex;
+
+    gap: 24px;
+}
+
+.section-two-list {
+    width: 264px;
+    gap: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* section-three  */
 
 .section-three {
     background: #F4F4FD;
 }
 
+
+
 .section-three-list {
     background-color: #FFF;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    width: 264px;
+    padding-bottom: 32px;
+
 }
+
+.section-three-lists {
+    padding-top: 72px;
+    display: flex;
+    gap: 24px;
+}
+
+/* section-four  */
+
+
+
+.section-four-lists {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-top: 72px;
+}
+
+.section-four-list {
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    flex-shrink: 0;
+    border: 1px solid #E7E9FC;
+    background: #FFF;
+    padding-bottom: 32px;
+
+}
+
+.section-four-list:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 24px;
+}
+
+/* footer  */
 
 .page-footer {
     background-color: #2E2F42;
+    display: flex;
+    padding: 100px 0;
 }
 
 .footer-logo {
@@ -148,8 +294,9 @@ h1 {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.17;
-    letter-spacing: 0.54px;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
+
 }
 
 .footer-span {
@@ -161,5 +308,7 @@ h1 {
     font-family: Roboto;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
+    width: 264px;
+    padding-top: 17px;
 }
