--- a/css/style.css
+++ b/css/style.css
@@ -35,19 +35,28 @@ button {
 
 
 .container {
-    max-width: 1440;
+    width: 1158px;
     margin: 0 156px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 /* header  */
 
 .page-header {
+
+
+
+
+    flex-shrink: 0;
+    border-bottom: 1px solid #E7E9FC;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 72px;
-    flex-shrink: 0;
-    border-bottom: 1px solid #E7E9FC;
 }
 
 .header-logo {
@@ -58,6 +67,7 @@ button {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px
 }
 
 
@@ -88,13 +98,17 @@ button {
 }
 
 .header-menu,
-.menu-nav,
 .address-contacts {
     display: flex;
 }
 
+nav {
+    display: flex;
+    align-items: center;
+}
+
 .header-menu {
-    display: inline-flex;
+    display: flex;
     align-items: flex-start;
     gap: 40px;
     margin-left: 76px;
