--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ nav {
     text-align: center;
     height: 600px;
     flex-shrink: 0;
-    padding-top: 188px;
+    padding: 188px 0;
 
 }
 
@@ -156,7 +156,7 @@ h1 {
     line-height: 1.07;
     letter-spacing: 0.02em;
     margin: 0 auto;
-    width: 496px;
+    max-width: 496px
 }
 
 .one-button {
@@ -167,12 +167,14 @@ h1 {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    display: inline-flex;
+    margin: 0 auto;
     padding: 16px 32px;
     align-items: flex-start;
     gap: 10px;
     margin-top: 48px;
-
+    display: block;
+    border: none;
+    border-radius: 4px;
 }
 
 .one-button:hover,
@@ -195,9 +197,19 @@ h1 {
 
 }
 
-.benefits {
-    display: none;
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+    margin-bottom: 8px;
 }
+
 
 .section-two,
 .section-three,
@@ -234,10 +246,11 @@ h1 {
 }
 
 .section-two-list {
-    width: 264px;
+
     gap: 8px;
     flex-direction: column;
     align-items: flex-start;
+    width: calc((100% - 72px) / 4);
 }
 
 /* section-three  */
@@ -310,7 +323,8 @@ h1 {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-span {
@@ -324,5 +338,5 @@ h1 {
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
-    padding-top: 17px;
+
 }
