--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@ button {
 /* header  */
 
 .page-header {
-
-
-
-
     flex-shrink: 0;
     border-bottom: 1px solid #E7E9FC;
 }
@@ -67,7 +63,7 @@ button {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-right: 76px
+    margin-right: 76px;
 }
 
 
@@ -112,6 +108,7 @@ nav {
     align-items: flex-start;
     gap: 40px;
     margin-left: 76px;
+    padding: 24px 0;
 }
 
 /* address  */
@@ -142,7 +139,6 @@ nav {
 .section-one {
     background: #2E2F42;
     text-align: center;
-    height: 600px;
     flex-shrink: 0;
     padding: 188px 0;
 
@@ -156,7 +152,7 @@ h1 {
     line-height: 1.07;
     letter-spacing: 0.02em;
     margin: 0 auto;
-    max-width: 496px
+    max-width: 496px;
 }
 
 .one-button {
@@ -175,6 +171,8 @@ h1 {
     display: block;
     border: none;
     border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
 }
 
 .one-button:hover,
@@ -198,16 +196,21 @@ h1 {
 }
 
 
+.benefits {
+    margin-bottom: 8px;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
     margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
     border: 0;
-    margin-bottom: 8px;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 
@@ -237,11 +240,15 @@ h1 {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+
+}
+
+.section-two-title {
+    margin-bottom: 72px;
 }
 
 .section-two-lists {
     display: flex;
-
     gap: 24px;
 }
 
@@ -251,6 +258,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 /* section-three  */
@@ -259,7 +267,14 @@ h1 {
     background: #F4F4FD;
 }
 
+.section-three-title {
+    text-align: center;
+}
 
+.section-three-text {
+    text-align: center;
+    margin-bottom: 8px;
+}
 
 .section-three-list {
     background-color: #FFF;
@@ -270,7 +285,12 @@ h1 {
     gap: 32px;
     width: 264px;
     padding-bottom: 32px;
+    border-radius: 0px 0px 4px 4px;
 
+}
+
+.info {
+    padding: 32px 0;
 }
 
 .section-three-lists {
