--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ button {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
+    padding: 24px 0ж
 }
 
 .page-link:hover {
@@ -171,8 +171,8 @@ h1 {
     display: block;
     border: none;
     border-radius: 4px;
-    min-width: 169px;
     height: 56px;
+    min-width: 169px;
 }
 
 .one-button:hover,
@@ -196,10 +196,6 @@ h1 {
 }
 
 
-.benefits {
-    margin-bottom: 8px;
-}
-
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -211,6 +207,7 @@ h1 {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+    margin-bottom: 8px;
 }
 
 
@@ -267,13 +264,18 @@ h1 {
     background: #F4F4FD;
 }
 
+.three-title {
+    margin-bottom: 72px;
+}
+
 .section-three-title {
     text-align: center;
+    margin-bottom: 8px;
 }
 
 .section-three-text {
     text-align: center;
-    margin-bottom: 8px;
+
 }
 
 .section-three-list {
@@ -301,12 +303,19 @@ h1 {
 
 /* section-four  */
 
+.four-title {
+    margin-bottom: 72px;
+}
 
+.section-four-title {
+    margin-bottom: 8px;
+}
 
 .section-four-lists {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 48px;
     margin-top: 72px;
 }
 
@@ -315,17 +324,22 @@ h1 {
     padding-bottom: 0px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+
     flex-shrink: 0;
-    border: 1px solid #E7E9FC;
     background: #FFF;
-    padding-bottom: 32px;
+
 
 }
 
-.section-four-list:not(:nth-last-child(-n + 3)) {
+.four-info {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
+/* .section-four-list:not(:nth-last-child(-n + 3)) {
     margin-bottom: 24px;
-}
+} */
 
 /* footer  */
 
