--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ h1 {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 72px;
 
 }
 
@@ -226,6 +227,7 @@ h1 {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 
@@ -264,13 +266,10 @@ h1 {
     background: #F4F4FD;
 }
 
-.three-title {
-    margin-bottom: 72px;
-}
+
 
 .section-three-title {
     text-align: center;
-    margin-bottom: 8px;
 }
 
 .section-three-text {
@@ -303,13 +302,9 @@ h1 {
 
 /* section-four  */
 
-.four-title {
-    margin-bottom: 72px;
-}
 
-.section-four-title {
-    margin-bottom: 8px;
-}
+
+
 
 .section-four-lists {
     display: flex;
@@ -324,11 +319,9 @@ h1 {
     padding-bottom: 0px;
     flex-direction: column;
     align-items: flex-start;
-
     flex-shrink: 0;
     background: #FFF;
-
-
+    width: calc((100% - 48px) / 3)
 }
 
 .four-info {
@@ -337,9 +330,13 @@ h1 {
     border-top: none;
 }
 
-/* .section-four-list:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 24px;
-} */
+.section-four-list:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 48px;
+}
+
+.section-four-list:not(:nth-last-child(n + 3)) {
+    margin-bottom: 0px;
+}
 
 /* footer  */
 
