--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ button {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0ж
+    padding: 24px 0 24px;
 }
 
 .page-link:hover {
@@ -197,6 +197,7 @@ h1 {
 }
 
 
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -229,6 +230,9 @@ h1 {
     margin-bottom: 8px;
 }
 
+.section-two-title {
+    margin-bottom: 8px;
+}
 
 .section-two-text,
 .section-three-text,
@@ -323,19 +327,13 @@ h1 {
     width: calc((100% - 48px) / 3)
 }
 
-.four-info {
+.section-four-list>.four-info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
 
-.section-four-list:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 48px;
-}
 
-.section-four-list:not(:nth-last-child(n + 3)) {
-    margin-bottom: 0px;
-}
 
 /* footer  */
 
