--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,9 @@ h1 {
     margin-bottom: 8px;
 }
 
-
+.section-two-title {
+    margin-bottom: 8px;
+}
 
 .section-two-text,
 .section-three-text,
