--- a/css/style.css
+++ b/css/style.css
@@ -322,13 +322,14 @@ h1 {
     align-items: flex-start;
     flex-shrink: 0;
     background: #FFF;
-    width: calc((100% - 48px) / 3)
-}
-
-.section-four-list>.four-info {
-    padding: 32px 16px;
+    width: calc((100% - 48px) / 3);
     border: 1px solid #e7e9fc;
     border-top: none;
+}
+
+.four-info {
+    padding: 32px 16px;
+
 }
 
 
