--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ button {
     cursor: pointer;
 }
 
+img {
+    display: block;
+}
+
 .container {
     width: 1158px;
     margin: 0 156px;
@@ -109,8 +113,7 @@ nav {
     display: flex;
     align-items: flex-start;
     gap: 40px;
-    margin-left: 76px;
-    padding: 24px 0;
+
 }
 
 /* address  */
@@ -282,13 +285,11 @@ h1 {
 
 .section-three-list {
     background-color: #FFF;
-    display: inline-flex;
+
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 32px;
-    width: 264px;
-    padding-bottom: 32px;
     border-radius: 0px 0px 4px 4px;
 
 }
@@ -298,7 +299,7 @@ h1 {
 }
 
 .section-three-lists {
-    padding-top: 72px;
+
     display: flex;
     gap: 24px;
 }
@@ -318,20 +319,20 @@ h1 {
 }
 
 .section-four-list {
-    display: flex;
-    padding-bottom: 0px;
+
+
     flex-direction: column;
     align-items: flex-start;
-    flex-shrink: 0;
+
     background: #FFF;
     width: calc((100% - 48px) / 3);
-    border: 1px solid #e7e9fc;
-    border-top: none;
+
 }
 
 .four-info {
     padding: 32px 16px;
-
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 
